# neuralprocesses

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENCE.txt  Makefile  README.md  advanced_usage.html  api.html  architectures.html  basic_usage.html  build_your_own_model.html  coders.html  content.html  eval-sawtooth.py  genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  plot_amortised_dp_params.py  predprey_visualise.py  py-modindex.html  pyproject.toml  requirements.txt  schedule.py  schedule_gp.py  schedule_synthetic.py  search.html  searchindex.js  setup.cfg  setup.py  tables.ipynb  tmp.ipynb  todo.tasks  train.py  train_gp.py  train_gp_tf.py  train_gp_torch.py  train_sgp.py  (+2 more)
.github/workflows/: build_book.yml  ci.yml  publish.yml  style.yml
_modules/: index.html
_sources/: api.rst  architectures.rst  build_your_own_model.md  intro.md
docs/: Makefile  _config.yml  _toc.yml  advanced_usage.md  api.rst  basic_usage.md  coders.rst  conf.py  intro.md
dpsgp/: __init__.py  kernels.py  likelihoods.py  sgp.py
experiment/: __init__.py  plot.py  util.py
experiment/data/: __init__.py  antarctica.py  eeg.py  gp.py  phone.py  predprey.py  temperature.py  util.py
neuralprocesses/: __init__.py  aggregate.py  ar.py  attention.py  augment.py  chain.py  coder.py  coding.py  core.py  datadims.py  disc.py  discretisation.py  dist.py  likelihood.py  mask.py  materialise.py  model.py  nn.py  numdata.py  parallel.py  setconv.py  union.py  util.py
neuralprocesses/ar/: __init__.py  enums.py  loglik.py  sampler.py  viz.py  (+1 more)
notebooks/: PredPrey.ipynb  antarctica.ipynb  consistency.ipynb  convcnp-epochs.npy  convcnp-mean_arloglik.npy  convcnp-mean_loglik.npy  convcnp-time.npy  convnp-mean_loglik.npy  convnp-time.npy  environmental-dataloader.ipynb  fullconvgnp-mean_arloglik.npy  fullconvgnp-mean_loglik.npy  fullconvgnp-time.npy  prediction_map.ipynb  sawtooth.ipynb  timing.ipynb
scripts/: ar_marginal.py  predprey.py  predprey_visualise.py  sawtooth_sample_ar.py  synthetic_diag_gp.py  synthetic_extra.py  synthetic_parse.py  temperature_mae.py  temperature_summarise_folds.py  temperature_visualise.py
tests/: __init__.py  test_architectures.py  test_augment.py  test_chain.py  test_data.py  test_discretisation.py  test_distribution.py  test_mask.py  test_model.py  test_phone.py  test_sampler.py  test_synthetic_audio.py  test_unet.py  test_util.py  util.py
(+103 files in other folders)
