[metadata]
name = neuralprocesses
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = A framework for composing Neural Processes in Python
url = https://github.com/wesselb/neuralprocesses
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
